--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@ window.onclick = (e) => {
   <br><br>
   <h2 class="text-center text-2xl font-bold">JOIN OUR TEAM</h2>
   <P>Do you have any training or experience in the financial sector? We are always looking for talented professionals to join our team. Please contact us for more information.</P>
-  <button class="cta-btn">Contact Us</button>
+  <button class="cta-btn">Know More</button>
+  <br><br>
+  <h2 class="text-center text-2xl font-bold">OUR LOCATION</h2>
+  <p>We are located at HH Towers 3rd floor, Nairobi, Kenya. Feel free to visit us or contact us for any inquiries.</p>
+  <img src="assets\image.png" alt="image-location" class="location-image">
 </section>
 <br><br>
 <footer class="bg-amber-50">
