--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="about.html" class="nav-link">About</a></li>
       <li><a href="services.html" class="nav-link">Services</a></li>
-      <li><a href="partners.html" class="nav-link">Partners</a></li>
+      <li><a href="team.html" class="nav-link">Our Team</a></li>
 
       <form class="search-container">
         <input type="text" placeholder="Search..." name="search" onkeyup="searchItems()">
@@ -201,12 +201,14 @@
           <h2 class="mb-6 text-sm font-semibold text-heading uppercase">Company</h2>
           <ul class="text-body font-medium"><br>
             <li class="mb-4">
-              <a href="#" class=" hover:text-cyan-800">About</a>
+              <a href="about.html" class=" hover:text-cyan-800">About</a>
             </li>
             <li class="mb-4">
-              <a href="#" class="hover:text-cyan-800">Careers</a>
+              <a href="services.html" class="hover:text-cyan-800">Services</a>
             </li>
-
+            <li class="mb-4">
+              <a href="team.html" class="hover:text-cyan-800">Team</a>
+            </li>
           </ul>
         </div>
         <div>
@@ -241,22 +243,22 @@
           <h2 class="mb-6 text-sm font-semibold text-heading uppercase">CONTACT US</h2>
           <ul class="text-body font-medium"> <br>
             <li class="mb-4">
-              <a href="#" class="hover:text-cyan-800">+254 712345678</a>
+              <a href="#" class="text-gray-800">Phone: <b class="text-cyan-600 hover:text-cyan-800">+254 712345678</b></a>
             </li>
             <li class="mb-4">
-              <a href="#" class="hover:text-cyan-800">mulleyfcltd@gmail.com</a>
+              <a href="#" class="text-gray-800">Email: <b class="text-cyan-600 hover:text-cyan-800">mulleyfcltd@gmail.com</b></a>
             </li>
             <li class="mb-4">
-              <a href="#" class="hover:text-cyan-800">support@mulleyfc.com</a>
+              <a href="#" class="text-gray-800">Suppport Email: <b class="text-cyan-600 hover:text-cyan-800">support@mulleyfc.com</b></a>
             </li>
             <li class="mb-4">
-              <a href="#" class="hover:text-cyan-800">+254 777711121</a>
+              <a href="#" class="text-gray-800">Phone: <b class="text-cyan-600 hover:text-cyan-800">+254 7777111210</b></a>
             </li>
           </ul>
         </div>
       </div> <br>
       <div class="px-4 py-6 bg-neutral-secondary-soft md:flex md:items-center md:justify-between">
-        <span class="text-m text-body font-bold sm:text-center">© 2023 <a href="index.html">MulleyFC™</a>. All Rights
+        <span class="text-m text-body font-bold sm:text-center">© 2021 <a href="index.html"> Mulley Financial Ltd</a>. All Rights
           Reserved.
         </span><br><br>
         <div class="flex mt-4 sm:justify-center md:mt-0 space-x-2 rtl:space-x-reverse">
