--- a/about.html
+++ b/about.html
@@ -51,6 +51,15 @@
   </section>
      <br><br>
   <section class="more-about-info">
+    <div class="content-about">
+    <h1><b>OUR STORY</b></h1>
+    <h2><b><i>Changing how we manage finances one business at a time</i></b></h2>
+    <p><b>Mulley Financial Consultancy</b> was founded in the year 2021 at the start of july. Being a just another new FC in Nairobi what set us apart from other businesses similar to our own was our client treatment and retention. Fast foward through the years we have grown at steady but fairly fast speed being among the top 
+        FC's in the Nairobi CBD. Through these years we have been able to gain hands on experince tackling our clients financial needs all while mentoring our staff and interns to be among the best in the industy. Our services have expanded greatly over the years to confidently suit our clients. 
+        Over the next few years we hope to expand our client pool and our skills to suit more and more business.
+        <br><br>Know more about our company's history below.
+    </p>
+    <br><br>
     <h1>Company Values</h1><br>
     <h2>Integrity</h2>
     <p>We uphold the highest standards of honesty and transparency in all our staff to staff and to client interactions.</p><br>
@@ -58,8 +67,43 @@
     <p>We place our clients at the heart of all our decisions, focusing on understanding and meeting their needs </p><br>
     <h2>Innovation</h2>
     <p>We embrace change and continuously seek innovative solutions to help our clients navigate their financial challenges in a fast business changing environment.</p><br>
-
+    </div>
   </section>
+   <br>
+  <section class="cards">
+  <div class="card">
+    <img src="assets\istockphoto-476355300-612x612.jpg" alt="">
+    <div class="card-content">
+      <span class="tag">Our Core Value since 2021</span>
+      <h3>Commitment to Excellence</h3>
+      <p>
+        We are committed to delivering the highest quality financial services and maintaining excellence in all our operations...
+      </p>
+      <small>29 Jul 2025</small>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets\images (1).png" alt="">
+    <div class="card-content">
+      <span class="tag">At The Center of Every Business</span>
+      <h3>Our Smartest Business Strategy</h3>
+      <p>Deep understanding of customer behavior coupled withproviding holistic experience...</p>
+      <small>22 Jan 2026</small>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets\images (2).jpg" alt="">
+    <div class="card-content">
+      <span class="tag">Business Registration</span>
+      <h3>Licensed and Accredited</h3>
+      <p>Mulley Financial Consultancy is licensed and accredited by the Certified Public Accountants of Kenya (ICPAK) receiving several certificates on our outstanding performance in financial services...</p>
+      <small>22 Jan 2026</small>
+    </div>
+  </div>
+
+</section>
 
    <footer class="bg-amber-50">
     <div class="mx-auto w-full max-w-screen-xl">
@@ -125,7 +169,7 @@
         </div>
       </div> <br>
       <div class="px-4 py-6 bg-neutral-secondary-soft md:flex md:items-center md:justify-between">
-        <span class="text-m text-body font-bold sm:text-center">© 2021 <a href="index.html"> Mulley Financial Ltd</a>. All Rights
+        <span class="text-m text-body font-bold sm:text-center ">© 2026 <a href="index.html"> Mulley Financial Ltd</a>. All Rights
           Reserved.
         </span><br><br>
         <div class="flex mt-4 sm:justify-center md:mt-0 space-x-2 rtl:space-x-reverse">
