Add changes to services .html

--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
     <br><br>
     <section class="services-minimal" id="services">
   <h2>Our Services</h2>
-  <p class="subtitle">Expert financial solutions designed for clarity and compliance</p>
+  <p class="subtitle"><b>Expert financial solutions designed for clarity and compliance</b></p>
 
   <div class="service-list">
 
@@ -65,7 +65,8 @@
       <span>01</span>
       <div>
         <h3>i-TAX Navigation</h3>
-        <p>Accurate preparation, filing, and submission of tax returns to KRA.</p>
+        <p>~ Pin registration and certificate aquirement. <br>~ Filing of individual and corporate taxes including VAT, Income Tax, Excise taxes and PAYE. 
+         <br></p>
       </div>
     </div>
 
@@ -73,7 +74,10 @@
       <span>02</span>
       <div>
         <h3>Tax Compliance Issues</h3>
-        <p>Resolving disputes, objections, and audit representation.</p>
+        <p>~ Acquiring Tax compliance Certificates. <br>
+            ~ KRA Tax disputes and negotiations representation. <br>
+            ~ Internal tax reviews for litigation purposes.
+        </p>
       </div>
     </div>
 
@@ -81,7 +85,9 @@
       <span>03</span>
       <div>
         <h3>eTIMS Navigation</h3>
-        <p>Setup, training, and smooth digital tax reporting.</p>
+        <p>~ Setup and business registration on eTIMS. <br>
+        ~ Managing you business on eTIMS to smooth your filing of returns. <br>
+    ~ Stock management and module assist on eTIMS</p>
       </div>
     </div>
 
@@ -89,7 +95,13 @@
       <span>04</span>
       <div>
         <h3>Corporate & Business Audits</h3>
-        <p>Compliance reviews, risk assessment, and internal controls.</p>
+        <p>~ Staff and costomer compliance reviews. <br>
+           ~ Risk asssesment and management. <br>
+           ~ Internal controls review. <br>
+           ~ Company's operational efficiency. <br>
+           ~ Board mangement and role execution. <br>
+           ~ Comprehensive report compilation
+        </p>
       </div>
     </div>
 
@@ -97,7 +109,7 @@
       <span>05</span>
       <div>
         <h3>Financial Investigations</h3>
-        <p>Fraud detection, forensic accounting, and transaction analysis.</p>
+        <p>~ Fraud detection. <br> ~ Forensic accounting, and transaction analysis.</p>
       </div>
     </div>
 
@@ -105,7 +117,7 @@
       <span>06</span>
       <div>
         <h3>Financial Advisory & Enquiry</h3>
-        <p>Strategic tax planning and business guidance.</p>
+        <p>~ Strategic tax planning, investments and business guidance.</p>
       </div>
     </div>
 
@@ -113,7 +125,15 @@
       <span>07</span>
       <div>
         <h3>Valuations</h3>
-        <p>Business and asset valuation for legal and investment use.</p>
+        <p>~ Business and asset valuation for legal and investment use.</p>
+      </div>
+    </div>
+
+    <div class="service-item">
+      <span>08</span>
+      <div>
+        <h3>On Enquiry Services</h3>
+        
       </div>
     </div>
 
