Add changes to services2

--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
       <span>08</span>
       <div>
         <h3>On Enquiry Services</h3>
-        
+         <p>~ Please contact us</p>
       </div>
     </div>
 
