add color changes to index and apply .html

--- a/apply.html
+++ b/apply.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="apply.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="bg-amber-50">
     <div class="application-header">
 <h1 >Application Form</h1> <p>Thank you for your interest in joining our team! Please fill out the application form below and we will get back to you as soon as possible.</p>
     </div>
@@ -15,7 +15,7 @@
   <div class="space-y-12">
     <div class="border-b border-gray-900/10 pb-12">
       <h2 class="text-base/7 font-semibold text-gray-900">Profile</h2>
-      <p class="mt-1 text-sm/6 text-gray-600">This information will be displayed the board so be careful what you share.</p>
+      
 
       <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
         <div class="sm:col-span-4">
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-span-full">
-          <label for="cover-photo" class="block text-sm/6 font-medium text-gray-900">Proffessional Passport photo</label>
+          <label for="cover-photo" class="block text-sm/6 font-medium text-gray-900"> Passport photo</label>
           <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
             <div class="text-center">
               <svg viewBox="0 0 24 24" fill="currentColor" data-slot="icon" aria-hidden="true" class="mx-auto size-12 text-gray-300">
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-span-full">
-          <label for="cover-photo" class="block text-sm/6 font-medium text-gray-900">Certification including any proof of finnancial aprenticeship</label>
+          <label for="cover-photo" class="block text-sm/6 font-medium text-gray-900">Certification including any proof of financial apprenticeship</label>
           <div class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10">
             <div class="text-center">
               <svg viewBox="0 0 24 24" fill="currentColor" data-slot="icon" aria-hidden="true" class="mx-auto size-12 text-gray-300">
@@ -127,6 +127,14 @@
           <label for="email" class="block text-sm/6 font-medium text-gray-900">Email address</label>
           <div class="mt-2">
             <input id="email" type="email" name="email" autocomplete="email" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" />
+          </div>
+        </div>
+
+        
+        <div class="sm:col-span-4">
+          <label for="email" class="block text-sm/6 font-medium text-gray-900">Phone Number</label>
+          <div class="mt-2">
+            <input id="phone-number" type="phone-number" name="phone-number" autocomplete="phone cc-number" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6" />
           </div>
         </div>
 
@@ -193,8 +201,8 @@
                 </div>
               </div>
               <div class="text-sm/6">
-                <label for="comments" class="font-medium text-gray-900">Comments</label>
-                <p id="comments-description" class="text-gray-500">Get notified on a position opening.</p>
+                <label for="comments" class="font-medium text-gray-900">Positions</label>
+                <p id="comments-description" class="text-gray-500">Get notified on any position openings.</p>
               </div>
             </div>
             <div class="flex gap-3">
@@ -208,7 +216,7 @@
                 </div>
               </div>
               <div class="text-sm/6">
-                <label for="candidates" class="font-medium text-gray-900">Candidates</label>
+                <label for="candidates" class="font-medium text-gray-900">Projects</label>
                 <p id="candidates-description" class="text-gray-500">Get notified on ongoing client projects.</p>
               </div>
             </div>
@@ -223,8 +231,8 @@
                 </div>
               </div>
               <div class="text-sm/6">
-                <label for="offers" class="font-medium text-gray-900">Offers</label>
-                <p id="offers-description" class="text-gray-500">Get notified on accepts or rejects an offers.</p>
+                <label for="offers" class="font-medium text-gray-900">News</label>
+                <p id="offers-description" class="text-gray-500">Get notified on any news on major changes in financial Conducts from Accrediting bodies.</p>
               </div>
             </div>
           </div>
