add changes to about me and deletions

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
    <br>
   <section class="cards">
   <div class="card">
-    <img src="assets\istockphoto-476355300-612x612.jpg" alt="">
+    <img src="assets\WhatsApp Image 2026-02-13 at 1.31.33 PM.jpeg" alt="">
     <div class="card-content">
       <span class="tag">Our Core Value since 2021</span>
       <h3>Commitment to Excellence</h3>
@@ -107,7 +107,7 @@
   </div>
 
   <div class="card">
-    <img src="assets\images (2).jpg" alt="">
+    <img src="assets\WhatsApp Image 2026-02-13 at 1.31.35 PM.jpeg" alt="">
     <div class="card-content">
       <span class="tag">Business Registration</span>
       <h3>Licensed and Accredited</h3>
